about page no longer overflows on smaller screens

--- a/css/about.css
+++ b/css/about.css
@@ -123,7 +123,7 @@
   }
 
   .my-about {
-    padding: 8%;
+    padding: 6%;
   }
 
   #my-picture {
